# food-automation

./: .env.example  .gitignore  CLAUDE.md  MOBILE.md  README.md  WORKFLOW.md  implementation-guide.md  issue_body.txt  pyproject.toml  requirements.md
.github/workflows/: apply-patch.yml  pr-checks.yml
docs/: AI_SERVICES_RESEARCH.md
patches/: README.md
src/food_automation/: __init__.py  cli.py  config.py
tests/: README.md  __init__.py  check_anthropic.py  check_openai.py  test_cli.py
