[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "food-automation"
version = "0.1.0"
description = "AI-powered food inventory monitoring system"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Tristan McKinney" },
]
dependencies = [
    "pillow>=10.0.0",
    "click>=8.1.0",
]

[project.scripts]
fridge = "food_automation.cli:main"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pyright>=1.1.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
typecheck = "pyright src tests"
lint = "ruff check {args:src tests}"
format = "ruff format {args:src tests}"
check = ["format", "lint", "typecheck", "test"]

[tool.hatch.build.targets.wheel]
packages = ["src/food_automation"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
