[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "food-automation"
version = "0.1.0"
description = "AI-powered food inventory monitoring system"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Tristan McKinney" },
]
dependencies = [
    "pillow>=10.0.0",
    "click>=8.1.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
fridge = "food_automation.cli:main"

[tool.hatch.envs.default]
type = "virtual"
path = ".hatch/food-automation"
dependencies = [
    "pytest>=7.0.0",
    "pyright>=1.1.0",
    "ruff>=0.1.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
typecheck = "pyright src tests"
lint = "ruff check {args:src tests}"
format = "ruff format {args:src tests}"
check = ["format", "lint", "typecheck", "test"]

[tool.hatch.build.targets.wheel]
packages = ["src/food_automation"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.pyright]
venvPath = ".hatch"
venv = "food-automation"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
exclude = ["tests/check_*.py"]
